syntax = "proto3";

option csharp_namespace = "SuperService.Protos";

package user;

message UserEmail {
  string email = 1;
}

message UserEmailResult {
 string email = 1;
 bool existing = 2;
}

message UserLogin {
	string email = 1;
	string username = 2;
	string password = 3;
	string refresh_token = 4;
}

message UserLoginResult {
	string email = 1;
	string value = 2;
	string issueAt = 3;
	int64 expireInHours = 4;
	string refreshToken = 5;
}

message EmailSearch {
	string keywords = 1;
	int64 size = 2;
}

message EmailSearchResult {
	repeated string results = 2;
}

message Profile {
	string surname = 1;
}

message UserProfile {
	string email = 1;
	Profile data = 2;
}

message UserAccount {
 string email = 1;
 string username = 2;
 string role = 3;
}

service UserService {
	rpc GetUser (UserEmail) returns (UserEmailResult);
	rpc CreateUser (UserEmail) returns (UserEmailResult);
	rpc VerifyUser (UserEmail) returns (UserEmailResult);
	rpc GetToken (UserLogin) returns (UserLoginResult);
}

service AccountService {
  rpc GetRole (UserEmail) returns (UserAccount);
  rpc GetAccount (UserEmail) returns (UserAccount);
}
